--- a/build.gradle
+++ b/build.gradle
@@ -73,11 +73,14 @@ repositories {
 
 dependencies {
 
-    compileOnly group: "org.hibernate",     name: "hibernate-annotations", version: "3.5.6-Final", ext: "jar"
+    //compileOnly group: "org.hibernate",     name: "hibernate-annotations", version: "3.5.6-Final", ext: "jar"
     compileOnly group: "org.projectlombok", name: "lombok",                version: "1.16.18"
 
     testCompile group: "org.slf4j",                  name: "slf4j-api",            version: "1.7.21"
-    testCompile group: "javax.persistence",          name: "persistence-api",      version: "1.0"
+
+    //testCompile group: "javax.persistence", name: "persistence-api", version: "1.0"
+    testCompile group: "org.hibernate",     name: "hibernate-core",  version: "5.3.5.Final"
+
     testCompile group: "junit",                      name: "junit",                version: "4.12"
     testCompile group: "org.codehaus.groovy",        name: "groovy-all",           version: "2.3.8"
     testCompile group: "com.zaxxer",                 name: "HikariCP",             version: "2.6.1"
