--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,12 @@ dependencies {
     testCompile group: "com.fasterxml.jackson.core", name: "jackson-databind",     version: "2.9.2"
     testCompile group: "mysql",                      name: "mysql-connector-java", version: "6.0.6"
     testCompile group: "com.google.guava",           name: "guava",                version: "21.0"
+    testCompile group: "org.jgrapht",                name: "jgrapht-core",         version: "1.3.0"
+    testCompile group: "org.jgrapht",                name: "jgrapht-io",           version: "1.3.0"
+    testCompile group: "org.jgrapht",                name: "jgrapht-ext",          version: "1.3.0"
+    testCompile group: "org.apache.avro",            name: "avro",                 version: "1.8.2"
+    testCompile group: "org.apache.avro",            name: "avro-tools",           version: "1.8.2"
+    testCompile group: "org.springframework",        name: "spring-beans",         version: "5.1.3.RELEASE"
 
     testRuntime group: "ch.qos.logback", name: "logback-classic",      version: "1.1.7"
 
